--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,23 @@
 /* You can add global styles to this file, and also import other style files */
+
+@font-face {
+    font-family: "Poppins";
+    src: url("./assets/fonts/Poppins-Regular.ttf") format("truetype");
+  
+  }
+
+  @font-face {
+    font-family: "Poppins-Bold";
+    src: url("./assets/fonts/Poppins-ExtraBold.ttf") format("truetype");
+  
+  }
+
+  @font-face {
+    font-family: "Poppins-Medium";
+    src: url("./assets/fonts/Poppins-Medium.ttf") format("truetype");
+  
+  }
+  
+body{
+    background-color: #030712;
+}
