--- a/src/app/Chat-Bet/pages/main-page/main-page.component.scss
+++ b/src/app/Chat-Bet/pages/main-page/main-page.component.scss
@@ -15,6 +15,10 @@ h1{
     font-weight: bold;
     font-family: "Poppins-Bold", sans-serif;
     margin-bottom: 0;
+    @media (max-width: 900px){
+        font-size: 2rem;
+
+    }
 }
 h3{
     font-size: 1.5rem;
