--- a/src/app/Chat-Bet/pages/main-page/main-page.component.scss
+++ b/src/app/Chat-Bet/pages/main-page/main-page.component.scss
@@ -11,7 +11,6 @@ p{
 }
 
 
-
 h1{
     font-size: 3rem;
     font-weight: bold;
@@ -19,7 +18,6 @@ h1{
     margin-bottom: 0;
     @media (max-width: 900px){
         font-size: 2rem;
-
     }
 }
 h3{
@@ -233,7 +231,7 @@ h3{
 
         .texto{
             display: flex;
-            align-items: center;
+            align-items: stretch;
             margin-top: 15px;
 
             img{
@@ -337,7 +335,7 @@ h3{
 
         .texto{
             display: flex;
-            align-items: center;
+            align-items: stretch;
 
             img{
                 width: 5px;
@@ -501,8 +499,7 @@ h3{
         display: flex;
         flex-direction: column;
         align-items: center;
-        text-align: center;
-     
+
 
        img{
               width: 100%;
