--- a/src/app/Chat-Bet/pages/main-page/main-page.component.scss
+++ b/src/app/Chat-Bet/pages/main-page/main-page.component.scss
@@ -606,7 +606,8 @@ h3{
         font-family: 'Poppins', sans-serif;
         margin-top: 15px;
         align-items: center;
-
+        color: #fff;
+        
         @media (max-width: 900px){
             width: 78%;
             padding: 2rem;
