--- a/src/app/Chat-Bet/pages/main-page/main-page.component.html
+++ b/src/app/Chat-Bet/pages/main-page/main-page.component.html
@@ -46,7 +46,7 @@
                 <p>
                    {{'text' | translate}} <br><br>
                     {{'secondtext' | translate}}<br><br>
-                    {{'thankstoia' | translate}}, <span>ChatBet</span>, {{'thankstoiatwo' | translate}}
+                    {{'thankstoia' | translate}}, <span class="TitleBold">ChatBet</span>, {{'thankstoiatwo' | translate}}
                 </p>
             </div>
             <button>{{'Get' | translate}}</button>
@@ -83,27 +83,27 @@
                 
 
                 <p *ngIf="currentIndex === 0" >
-                    <span>{{ 'Generación' | translate }}</span> {{ 'Mantenga' | translate }}<br><br>
-                    <span>{{ 'Pronósticos' | translate }}</span> {{ 'Proporcione' | translate }}<br><br>
-                    <span>{{ 'Bonos' | translate }}</span> {{ 'Incentive' | translate }}
+                    <span class="TitleBold">{{ 'Generación' | translate }}</span> {{ 'Mantenga' | translate }}<br><br>
+                    <span class="TitleBold">{{ 'Pronósticos' | translate }}</span> {{ 'Proporcione' | translate }}<br><br>
+                    <span class="TitleBold">{{ 'Bonos' | translate }}</span> {{ 'Incentive' | translate }}
                 </p>
         
                 <p *ngIf="currentIndex === 1">
-                    <span>{{ 'slideone' | translate }}</span> {{ 'slidetwo' | translate }}<br><br>
-                    <span>{{ 'slidethree' | translate }}</span> {{ 'slidefour' | translate }}<br><br>
-                    <span>{{ 'slidefive' | translate }}</span> {{ 'slidesix' | translate }}<span> ChatBet </span>{{ 'slideseven' | translate }}
+                    <span class="TitleBold">{{ 'slideone' | translate }}</span> {{ 'slidetwo' | translate }}<br><br>
+                    <span class="TitleBold">{{ 'slidethree' | translate }}</span> {{ 'slidefour' | translate }}<br><br>
+                    <span class="TitleBold">{{ 'slidefive' | translate }}</span> {{ 'slidesix' | translate }}<span class="TitleBold"> ChatBet </span>{{ 'slideseven' | translate }}
                 </p>
         
                 <p *ngIf="currentIndex === 2">
-                    <span>{{'slidetwoone' | translate}}</span> <span> ChatBet </span>{{ 'slidetwotwo' | translate }}<br><br>
-                    <span>{{ 'slidetwothre' | translate }}</span> {{ 'slidetwofour' | translate }}<br><br>
-                    <span>{{ 'slidetwofive' | translate }}</span> {{ 'slidetwosix' | translate }} <span>ChatBet</span> {{ 'slidetwoseven' | translate }}
+                    <span class="TitleBold">{{'slidetwoone' | translate}}</span> <span class="TitleBold"> ChatBet </span>{{ 'slidetwotwo' | translate }}<br><br>
+                    <span class="TitleBold">{{ 'slidetwothre' | translate }}</span> {{ 'slidetwofour' | translate }}<br><br>
+                    <span class="TitleBold">{{ 'slidetwofive' | translate }}</span> {{ 'slidetwosix' | translate }} <span class="TitleBold">ChatBet</span> {{ 'slidetwoseven' | translate }}
                 </p>
 
                 <p *ngIf="currentIndex === 3">
-                    <span>{{ 'sliderthreeone' | translate }}</span> {{ 'sliderthreetwo' | translate }} <span> ChatBet </span> {{'sliderthreethree' | translate}}<br><br>
-                    <span>{{ 'sliderthreefour' | translate }}</span> {{ 'sliderthreefive' | translate }} <span> ChatBet </span> {{'sliderthreesix' | translate}}<br><br>
-                    <span>{{ 'sliderthreeseven' | translate }}</span>
+                    <span class="TitleBold">{{ 'sliderthreeone' | translate }}</span> {{ 'sliderthreetwo' | translate }} <span class="TitleBold"> ChatBet </span> {{'sliderthreethree' | translate}}<br><br>
+                    <span class="TitleBold">{{ 'sliderthreefour' | translate }}</span> {{ 'sliderthreefive' | translate }} <span class="TitleBold"> ChatBet </span> {{'sliderthreesix' | translate}}<br><br>
+                    <span class="TitleBold">{{ 'sliderthreeseven' | translate }}</span>
                 </p>
         
             </div>
@@ -136,24 +136,24 @@
         <div class="texto">
 
             <p *ngIf="currentIndextwo === 0">
-                <span>{{'Reducción' | translate}}</span>  {{'Minimiza' | translate}}<br><br>
-                <span>{{'Machine' | translate}} </span>{{'Utiliza' | translate}}<br><br>
-                <span>{{'IA' | translate}}</span> {{'Responde' | translate}}
+                <span class="TitleBold">{{'Reducción' | translate}}</span>  {{'Minimiza' | translate}}<br><br>
+                <span class="TitleBold">{{'Machine' | translate}} </span>{{'Utiliza' | translate}}<br><br>
+                <span class="TitleBold">{{'IA' | translate}}</span> {{'Responde' | translate}}
 
             <p *ngIf="currentIndextwo === 1">
-                <span>{{'slidefourone' | translate}}</span>  {{'slidefourtwo' | translate}}<br><br>
-                <span>{{'slidefourthree' | translate}}</span> {{'slidefourfour' | translate}}
+                <span class="TitleBold">{{'slidefourone' | translate}}</span>  {{'slidefourtwo' | translate}}<br><br>
+                <span class="TitleBold">{{'slidefourthree' | translate}}</span> {{'slidefourfour' | translate}}
             </p>
 
             <p *ngIf="currentIndextwo === 2">
-                <span>{{ 'slidefiveone' | translate }}</span> {{ 'slidefivetwo' | translate }}<br><br>
-                <span>{{ 'slidefivethree' | translate }}</span> {{ 'slidefivefour' | translate }}<br><br>
-                <span>{{ 'slidefivefive' | translate }}</span> {{ 'slidefivesix' | translate }}
+                <span class="TitleBold">{{ 'slidefiveone' | translate }}</span> {{ 'slidefivetwo' | translate }}<br><br>
+                <span class="TitleBold">{{ 'slidefivethree' | translate }}</span> {{ 'slidefivefour' | translate }}<br><br>
+                <span class="TitleBold">{{ 'slidefivefive' | translate }}</span> {{ 'slidefivesix' | translate }}
             </p>
     
             <p *ngIf="currentIndextwo === 3">
-                <span>{{ 'slidefiveoneone' | translate }}</span> {{ 'slidefivetwotwo' | translate }}<br><br>
-                <span>{{ 'slidefivethreeone' | translate }}</span> 
+                <span class="TitleBold">{{ 'slidefiveoneone' | translate }}</span> {{ 'slidefivetwotwo' | translate }}<br><br>
+                <span class="TitleBold">{{ 'slidefivethreeone' | translate }}</span> 
             </p>
 
         </div>
@@ -180,7 +180,7 @@
         <h1> {{'CómoFunciona' | translate}}</h1>
         <div class="texto">
             <p>
-                {{'integramos' | translate}} <span>ChatBet</span> {{'sitio' | translate}}
+                {{'integramos' | translate}} <span class="TitleBold">ChatBet</span> {{'sitio' | translate}}
             </p>
         </div>
     </div>
@@ -217,7 +217,7 @@
 
     <div class="text">
         <h1> {{'Sencilla' | translate}}</h1>
-        <h3>{{'Personalice' | translate}}<span> ChatBet</span> {{'yhaga' | translate}}</h3>
+        <h3>{{'Personalice' | translate}}<span class="TitleBold"> ChatBet</span> {{'yhaga' | translate}}</h3>
     </div>
 
     <div class="image-section">
@@ -235,7 +235,7 @@
 
     <div class="text">
         <h1> {{'Listopara' | translate}} </h1>
-        <h3><span>{{'Únase' | translate}} </span> {{'Agendemos' | translate}}</h3>
+        <h3><span class="TitleBold">{{'Únase' | translate}} </span> {{'Agendemos' | translate}}</h3>
     </div>
 
     <div class="form" [formGroup]="form">
