--- a/src/app/Chat-Bet/pages/main-page/main-page.component.html
+++ b/src/app/Chat-Bet/pages/main-page/main-page.component.html
@@ -235,7 +235,7 @@
 
     <div class="text">
         <h1> {{'Listopara' | translate}} </h1>
-        <h3><span class="TitleBold">{{'Únase' | translate}} </span> {{'Agendemos' | translate}}</h3>
+        <h3><span class="TitleBoldMobile">{{'Únase' | translate}} </span> {{'Agendemos' | translate}}</h3>
     </div>
 
     <div class="form" [formGroup]="form">
