--- a/src/app/Chat-Bet/pages/main-page/main-page.component.scss
+++ b/src/app/Chat-Bet/pages/main-page/main-page.component.scss
@@ -124,6 +124,12 @@ h3{
     .TitleBold{
         font-family: "Poppins-Bold", sans-serif;
     }
+    .TitleBoldMobile{
+        font-family: "Poppins-Bold", sans-serif;
+        @media screen and (max-width: 900px){
+            font-size: 1.5rem;
+        }
+    }
 
 
     /* First Section */
