--- a/src/app/Chat-Bet/pages/main-page/main-page.component.html
+++ b/src/app/Chat-Bet/pages/main-page/main-page.component.html
@@ -1,6 +1,6 @@
 <div class="section">
   <div class="background">
-    <img src="./assets/Background/Seccion1.svg" alt="" />
+    <img src="./assets/Background/Seccion1.png" alt="" />
   </div>
 
   <header>
@@ -37,16 +37,17 @@
         </div>
       </div>
     </div>
-  </header>
 
+  </header>
+  
   <div class="first-section">
     <div class="gif2">
       <img
-        src="./assets/img/VIdeoGreenRun_Mobile_MatGif_05_02.gif"
+        src="../../../../assets/img/Frame1.png"
         alt=""
         style="margin-top: 0"
       />
-      <div class="video" id="gifImageMobile" (click)="playVideoMobile()"></div>
+      <!-- <div class="video" id="gifImageMobile" (click)="playVideoMobile()"></div> -->
       <video
         #videoElementMobile
         width="100%"
@@ -96,11 +97,11 @@
         }"
       >
         <img
-          src="./assets/img/VIdeoGreenRun_Mobile_MatGif_05_02.gif"
+          src="../../../../assets/img/Frame1.png "
           alt=""
           style="margin-top: 0"
         />
-        <div class="video-play" id="gifImage" (click)="playVideo()"></div>
+        <!-- <div class="video-play" id="gifImage" (click)="playVideo()"></div> -->
         <video
           #videoElement
           width="100%"
@@ -114,12 +115,17 @@
       </div>
     </div>
   </div>
+
+</div>
+
+<div class="backgroundline">
+  <img src="../../../../assets/Background/end-sect-one.png " alt="" />
 </div>
 
 <div id="funciones" class="section">
-  <div class="background">
+  <!-- <div class="background">
     <img src="./assets/Background/Seccion2.svg" alt="" />
-  </div>
+  </div> -->
   <div class="second-section">
     <h1>{{ "Features" | translate }}</h1>
     <div class="second-flex">
@@ -187,9 +193,9 @@
 </div>
 
 <div id="beneficios" class="section">
-  <div class="background">
+  <!-- <div class="background">
     <img src="./assets/Background/Seccion3.svg" alt="" />
-  </div>
+  </div> -->
   <div class="third-section">
     <h1>{{ "Beneficios" | translate }}</h1>
     <div class="third-flex">
@@ -249,9 +255,9 @@
 </div>
 
 <div id="comofunciona" class="section">
-  <div class="background">
+  <!-- <div class="background">
     <img src="./assets/Background/Seccion4.svg" alt="" />
-  </div>
+  </div> -->
   <div class="fourth-section">
     <div class="text">
       <h1>{{ "CómoFunciona" | translate }}</h1>
@@ -306,9 +312,9 @@
 </div>
 
 <div id="contactanos" class="section">
-  <div class="background">
+ <!--  <div class="background">
     <img src="./assets/Background/Seccion5.svg" alt="" />
-  </div>
+  </div> -->
   <div class="sixth-section">
     <div class="text">
       <h1>{{ "Listopara" | translate }}</h1>
